--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 	<script src="tincan.js" type="text/javascript" charset="utf-8"></script>
 	<script src="jquery-3.1.1.min.js"></script>
@@ -17,6 +18,7 @@
 	<script src="script.js" type="text/javascript" charset="utf-8"></script>
 
 		<link rel="stylesheet" type="text/css" href="myCss.css" />
+		<link rel="stylesheet" type="text/css" href="querymyCss.css" />
 
 </br>
 	
@@ -24,6 +26,7 @@
 	<title>Associate Tracer</title>
 	
 </head>
+
 
 
 <body id="" onload="">
